@@ -18,6 +18,8 @@ Version 0.7
   conditional HTTP response.
 - The routing system provides a method to retrieve the matching
   methods for a given path.
+- The routing system now accepts a parameter to change the encoding
+  error behaviour.
 
 Version 0.6.2
 -------------
